--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@asymmetrik/ngx-leaflet": "^5.0.2",
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
+    "@types/leaflet": "^1.5.7",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "crypto-js": "^3.1.9-1",
     "jquery": "^3.4.0",
+    "leaflet": "^1.6.0",
     "ng-pick-datetime": "^7.0.0",
     "ng2-charts": "^2.2.2",
     "ngx-bootstrap": "^4.0.1",
